# road-dashboards

./: .gitignore  .gitlab-ci.yml  .jenignore  .pre-commit-config.yaml  .yapfignore  MANIFEST.in  README.md  Taskfile.yml  catalog-info.yaml  conftest.py  hatch.toml  mkdocs.yml  pyproject.toml  setup.cfg  setup.py
.auth/: .setup_auth.sh
.gitlab/issue_templates/: default.md
.gitlab/merge_request_templates/: default.md
_infra/jenlib_lib/cicd/: jobs-registrator.pipe.groovy  package.deliver.pipe.cfg.yml
_infra/mxp-docs-lib/: backstage.yml  requirements.txt
_infra/mxpack_lib/cicd/: package.deliver.pipe.groovy
_infra/mxpack_lib/tasks/: Dockerfile  conda.tasks.yml  denv.tasks.yml  docker.tasks.yml  mxp-clean.tasks.yml  py.tasks.yml  pyinstaller.tasks.yml  pypi.tasks.yml  report.tasks.yml  version.tasks.yml
_infra/mxpack_lib/tools/: crun.sh  denv.sh  venv.sh
boa.recipe/: create_env_yaml_from_recipe.py  recipe.yaml
docker/: Dockerfile  Dockerfile.data-exploration  Dockerfile.eval-dashboard  Dockerfile.workflows-dashboard  Taskfile.yml  docker.tasks.yml
docs/: index.md  release_notes.md
rattler.recipe/: create_env_yaml_from_recipe.py  dev.env.yml  recipe.yaml
road_dashboards/: __about__.py
road_dashboards/road_dump_dashboard/: app.py  env.yaml  requirements.txt
road_dashboards/road_dump_dashboard/assets/: style.css
road_dashboards/road_dump_dashboard/graphical_components/: confusion_matrix.py  countries_map.py  frame_drawer.py  histogram_plot.py  line_graph.py  pie_chart.py
road_dashboards/road_dump_dashboard/graphs/: big_number.py  confusion_matrix.py  frame_drawer.py  line_graph.py  pie_or_line_wrapper.py
road_dashboards/road_dump_dashboard/logical_components/: mexsense_link.py
road_dashboards/road_dump_dashboard/pages/: data_distribution.py  dataset_workflow.py  home.py  home_page.py  lane_mark_page.py  lane_marks.py  meta_data.py  meta_data_page.py  not_found_404.py  pathnet.py  pathnet_page.py  scenes_distribution.py  workflow_log.py
road_dashboards/road_dump_dashboard/table_schemes/: base.py  custom_functions.py  lane_marks.py  meta_data.py  pathnet.py  scenes.py
road_dashboards/road_eval_dashboard/: app.py  env.yaml  requirements.txt
road_dashboards/road_eval_dashboard/assets/: custom.geo.json  data_enums.py  style.css
road_dashboards/road_eval_dashboard/components/: base_dataset_statistics.py  catalog_table.py  common_filters.py  components_ids.py  confusion_matrices_layout.py  dcc_stores.py  dp_count_card.py  emdp_count_card.py  export_jira_modal.py  fb_meta_data_filters.py  frame_count_card.py  graph_wrapper.py  gt_count_card.py  init_threads.py  meta_data_filter.py  mexsense_link.py  net_properties.py  page_content.py  pathnet_data_filter.py  population_card.py  queries_manager.py  sidebar.py
road_dashboards/road_eval_dashboard/graphs/: bar_graph.py  confusion_matrix.py  countries_map.py  meta_data_filters_graph.py  path_net_line_graph.py  precision_recall_curve.py  roc_curve.py
road_dashboards/road_eval_dashboard/pages/: accuracy_page.py  ca_rel_page.py  color_page.py  data_exploration_page.py  emdp_page.py  home_page.py  lm_3d_page.py  max_speed_page.py  overview_page.py  (+6 more)
road_dashboards/workflows_dashboard/: analytics_manager.py  app.py  env.yaml  requirements.txt
road_dump_dashboard/: __init__.py  app.py
road_dump_dashboard/components/: base_dataset_statistics.py  catalog_table.py  common_filters.py  components_ids.py  dcc_stores.py  display_frames.py  dump_properties.py  frame_count_card.py  init_base_data.py  intersection_data_switch.py  lm_count_card.py  meta_data_filter.py  page_properties.py  population_card.py  queries_manager.py  sidebar.py  tables_properties.py
road_dump_dashboard/graphs/: bar_graph.py  confusion_matrix.py  countries_map.py  histogram_plot.py  line_graph.py  pie_or_line_wrapper.py
road_dump_dashboard/pages/: batch_sampling_page.py  data_exploration_page.py  home_page.py  lane_mark_page.py  meta_data_page.py  not_found_404.py  pathnet_page.py
road_eval_dashboard/: __about__.py  __mxp_version.py  app.py  dummy_main_module.py  local.crt  local.key
road_eval_dashboard/assets/: custom.geo.json  data_enums.py  style.css
road_eval_dashboard/components/: base_dataset_statistics.py  catalog_table.py  common_filters.py  components_ids.py  confusion_matrices_layout.py  dcc_stores.py  dp_count_card.py  emdp_count_card.py  export_jira_modal.py  fb_meta_data_filters.py  frame_count_card.py  graph_wrapper.py  gt_count_card.py  init_threads.py  layout_wrapper.py  meta_data_filter.py  net_properties.py  page_content.py  pathnet_data_filter.py  pathnet_events_extractor_card.py  population_card.py  queries_manager.py  sidebar.py
road_eval_dashboard/graphs/: confusion_matrix.py  histogram_plot.py  meta_data_filters_graph.py  path_net_line_graph.py  precision_recall_curve.py  roc_curve.py  tp_rate_graph.py
road_eval_dashboard/pages/: accuracy_page.py  color_page.py  data_exploration_page.py  emdp_page.py  home_page.py  lm_3d_page.py  max_speed_page.py  overview_page.py  painted_page.py  path_net_page.py  scene_page.py  type_page.py  view_range_page.py  width_page.py
road_eval_dashboard/road_dump_dashboard/: app.py
road_eval_dashboard/road_eval_dashboard/: app.py  requirements.txt
road_eval_dashboard/utils/: jira_handler.py  url_state_utils.py
tasks/: ci.tasks.yml  dev.tasks.yml  py.tasks.yml  test-cli.tasks.yml
tests/: test-cli.tasks.yml  tests.tasks.yml
tests/components/: pst___dummy__component_test.py
tests/units/: pst___dummy__test.py
version/: conda_lib_config.yml  git_info_config.yml  git_tag_prefix.txt  jenlib_config.yml  project_name.txt
version/conda-recipe/: conda_build_config.yaml  meta.yaml
version/mxp-recipe/: infos_config.yml  project_layout.yml
version/recipe-jenlib/: agent_env_settings.yml  package.deliver.pipe.pod.tmpl.yaml
workflows_dashboard/: app.py  config.py  utils.py  workflows_db_manager.py
workflows_dashboard/components/: layout_wrapper.py
workflows_dashboard/core_settings/: constants.py  settings.py
workflows_dashboard/database/: workflow_manager.py
(+263 files in other folders)
