[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "road-dashboards"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
  { name = "Nadav Shemesh", email = "nadav.shemesh@mobileye.com" },
]
classifiers = [
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "fire",
  "pyyaml",
  "loguru",
  "orjson",
  "typing_extensions >=3.7.4",
  "numpy",
  "pandas",
  "pyyaml"
]

[tool.ruff]
line-length = 120
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["F541", "I"]  # enforcing redundant f-strings and isort sorting

[tool.coverage.run]
source_pkgs = ["road_dashboards"]
branch = true
parallel = true
omit = [
  "road_dashboards/__about__.py",
]

[tool.coverage.paths]
road-dashboards = ["road_dashboards", "*/road-dashboards/road_dashboards"]
tests = ["tests", "*/road-dashboards/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[[tool.mypy.overrides]]
# Fill here modules you want to ignore while type checking:
module = [
    'boto3',
    'fire',
    'ruamel.yaml',
]
ignore_missing_imports = true